--- a/app/components/Gallery/Gallery.module.scss
+++ b/app/components/Gallery/Gallery.module.scss
@@ -27,7 +27,7 @@
   font-size: 48px;
   font-weight: 700;
   letter-spacing: 2px;
-  color: #000;
+  color: #fff;
   margin: 0 0 10px 0;
   position: relative;
   display: inline-block;
