--- a/app/components/Hero/Hero.module.scss
+++ b/app/components/Hero/Hero.module.scss
@@ -112,7 +112,7 @@
   letter-spacing: -4px;
   line-height: 1;
   margin: 0;
-  color: #000;
+  color: #fff;
 
   @media (prefers-color-scheme: dark) {
     color: #fff;
@@ -139,7 +139,7 @@
   letter-spacing: -4px;
   line-height: 1;
   margin: 0;
-  color: #000;
+  color: #fff;
 
   @media (prefers-color-scheme: dark) {
     color: #fff;
